Fixed the alignment of the sign up button in section four

--- a/styles.css
+++ b/styles.css
@@ -195,13 +195,13 @@ button {
 
     border-radius: 8px;
     padding: 50px 100px;
+    justify-content: space-between;
 }
 
 .textcontainer {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
-    padding-right: 50px;
 }
 
 .action {
@@ -220,6 +220,7 @@ button {
     display: flex;
     justify-content: center;
     width: 100px;
+    margin-left: auto;
 }
 
 .signuptwo {
